--- a/firebase-auth.html
+++ b/firebase-auth.html
@@ -66,8 +66,8 @@
 
 <!-- Create a new user -->
 	<h1>No Account? Please Sign up!</h1>
-	<input id="signUpEmail"type="text" placeholder="Email Address">
-	<input id="signUpPassword"type="password" name="">
+	<input id="signUpEmail"type="text" placeholder="Email Address"/>
+	<input id="signUpPassword"type="password" name=""/>
 	<button id="signUpButton">Sign Up</button>
 
 	<hr width="550px"/>
@@ -81,6 +81,8 @@
 		<button class="chatButton">Enter</button>
 	</form>
 </div>
+
+<p class="uid">	</p>
 
 <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
 <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
