--- a/firebase-auth.html
+++ b/firebase-auth.html
@@ -48,6 +48,10 @@
 			text-align: left;
 			margin: 5px;
 		}
+		.userText{
+			display: flex;
+			flex-direction: column;
+		}
 	</style>
 </head>
 <body>
