--- a/firebase-auth.html
+++ b/firebase-auth.html
@@ -51,6 +51,9 @@
 		.userText{
 			display: flex;
 			flex-direction: column;
+			background-color: blue;
+			height: 170px;
+			flex-wrap: wrap;
 		}
 	</style>
 </head>
